fix for table wrapping

--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -60,6 +60,10 @@ a {
 }
 
 // Tables
+.table-keycol {
+    overflow: hidden;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
